<resources>
    <string name="app_name">Simple Background Task</string>
    <string name="ready_to_start">I am ready to start work!</string>
    <string name="start_task">Start Task</string>
    <string name="loading">Loading...</string>
    <string name="reset">Reset</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="status_active">Active</string>
    <string name="status_inactive">Inactive</string>
</resources>