<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HttpURLConnectionActivity">

    <EditText
        android:id="@+id/editTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin"
        android:hint="id"
        android:inputType="number"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin"
        android:hint="name"/>
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin"
        android:inputType="textEmailAddress"
        android:hint="email"/>
    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin">
        <RadioButton
            android:id="@+id/radioGenderMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_male"/>
        <RadioButton
            android:id="@+id/radioGenderFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_female"/>
        <RadioButton
            android:id="@+id/radioGenderOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_other"/>
    </RadioGroup>
    <RadioGroup
        android:id="@+id/radioGroupStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin">
        <RadioButton
            android:id="@+id/radioStatusActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_active"/>
        <RadioButton
            android:id="@+id/radioStatusInactive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_inactive"/>
    </RadioGroup>
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin"
        android:text="GET/ADD"
        />

    <TextView
        android:id="@+id/textViewHttp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:textAlignment="center" />

</LinearLayout>